Principais Tags HTML PT. 1
Aprendendo um pouco sobre as principais Tags HTML

--- a/HTML/PrincipaisTags1.html
+++ b/HTML/PrincipaisTags1.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Principais Tags HTML - PT I</title>
 </head>
 <body>
-    <!-- Isso é um comentário -->
+    <!-- Isso aqui é um comentário -->
+    <!-- Cabeçalhos -->
+     <h1>Título Principal</h1>
+
+     <hr> 
+
+     <h2>Cabeçalho h2</h2>
+     <h3>Cabeçalho h3</h3>
+     <h4>Cabeçalho h4</h4>
+     <h5>Cabeçalho h5</h5>
+     <h6>Cabeçalho h5</h6>
+
+     <!-- Parágrafos -->
+      <p>Parágrafo.</p>
+      <p>Outro parágrafo</p>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, consectetur minus illum ipsam, labore illo sint quae explicabo tenetur inventore ut in harum quidem rerum fugit libero dolores animi officia!</p>
+
+      <!-- Quebra de linha -->
+       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Dolore voluptates, perferendis porro cum assumenda accusamus nemo quasi ullam cupiditate est saepe asperiores obcaecati officia repellat, labore quidem amet ratione soluta.</p>
+
+       <!-- Link -->
+
+       <a href="https://github.com/msilvapereira" target="_blank">Clique aqui para visitar meu Github!</a>
 </body>
 </html>
