--- a/CSS/Fontes-medidas-e-links/index.html
+++ b/CSS/Fontes-medidas-e-links/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes, medidas e links</title>
-    <link rel="stylesheet" href="styles02.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Fontes, medidas e links</h1>
