--- a/CSS/Aula03/index.html
+++ b/CSS/Aula03/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Listas, tabelas, box model e display</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Tabelas</h1>
@@ -11,7 +12,7 @@
     <section id="finance">
         <h2>Tabela de controle financeiro</h2>
 
-        <table border="2">
+        <table>
             <thead>
                 <tr>
                     <th>Data</th>
