--- a/CSS/Projeto/index.html
+++ b/CSS/Projeto/index.html
@@ -9,12 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
+
 </head>
 <body>
     <div class="content">
         <aside>
             <img src="Assets/hero.svg" alt="">
-
             <h1><span>We</span> Form</h1>
         </aside>
 
@@ -22,7 +22,7 @@
             <h2>Cadastre sua <span>entidade</span> ou acesse dados <span>de parceiras</span></h2>
 
             <div class="actions">
-                <a href="">Cadastrar entidade</a>
+                <a href="cadastro-entidade.html">Cadastrar entidade</a>
                 <a href="">Ver entidades cadastradas</a>
             </div>
 
